# P18-NanoBananaPro-as-Core-model

./: Home.py  Makefile  README.md  pyproject.toml
pages/: 10_Movement_Detection_Run.py  1_Simple_Prompt.py  2_Sketch_to_Photo.py  3_Masked_Outpaint.py  4_Custom_EmptyRoom_to_Adapt.py  9_Compare_Processes.py
src/p18_nano_banana_core_model/: __init__.py  genai_client.py  image_utils.py  outpaint.py  types.py
src/p18_nano_banana_core_model/processes/: __init__.py  custom_emptyroom_adapt.py  masked_outpaint.py  simple_prompt.py  sketch_to_photo.py
src/p18_nano_banana_core_model/utils/: data.py  prompt.py  saver.py
